feature: add mongodb and modify video-streaming accordingly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '3'
 services:
 
+  db:
+    image: mongo:4.2.8
+    container_name: db
+    ports:
+      - "4000:27017"
+    restart: always
+
   azure-storage:
     image: azure-storage
     build: 
@@ -8,11 +15,10 @@ services:
       dockerfile: Dockerfile
     container_name: video-storage
     ports:
-     - "4000:80"
+      - "4001:80"
     environment:
       - PORT=80
-      - STORAGE_ACCOUNT_NAME=videostreaming01
-      - STORAGE_ACCESS_KEY=LqSG2uaswzoDp7xmnBU/M75+c1UUCXfGL4pzyR+HnWmDdRSuAeUekaxYYPgur9pRWoS/S4FLrXEw+AStgUISmQ==
+      - AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=videostreaming01;AccountKey=LqSG2uaswzoDp7xmnBU/M75+c1UUCXfGL4pzyR+HnWmDdRSuAeUekaxYYPgur9pRWoS/S4FLrXEw+AStgUISmQ==;EndpointSuffix=core.windows.net
     restart: "no"
 
   video-streaming:
@@ -22,9 +28,11 @@ services:
       dockerfile: Dockerfile
     container_name: video-streaming
     ports:
-     - "4001:80"
+      - "4002:80"
     environment:
       - PORT=80
+      - DBHOST=mongodb://db:27017
+      - DBNAME=video-streaming
       - VIDEO_STORAGE_HOST=video-storage
       - VIDEO_STORAGE_PORT=80
     restart: "no"
