--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.8.0"
   },
   "name": "microservices-test",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node src/index.js",
     "start:dev": "nodemon src/index.js",
